# melting-potlist

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.example.yaml  docker-compose.yml  entrypoint.sh  manage.py  melting_potlist.example.yaml  pyproject.toml  requirements.txt
apps/api/: serializers.py  urls.py  views.py
apps/core/: apps.py  context_processors.py  middlewares.py  playlist_generator.py  urls.py  views.py
apps/discord_login/: __init__.py  apps.py  backends.py  models.py  oauth.py  urls.py  views.py
apps/discord_login/migrations/: 0001_initial.py
apps/user_profile/: __init__.py  apps.py  forms.py  models.py  uri_converter.py  urls.py  views.py  youtube_playlist_extractor.py
apps/user_profile/migrations/: 0001_initial.py  0002_add_playlists_and_tracks.py  0003_migrate_previous_playlist.py  0004_remove_usersettings_core_playlist_url.py  0005_add_dynamic_playlists_and_track_stats.py  0005_alter_ids_to_big_auto_field.py  0006_add_dynamic_playlists_and_track_stats.py  0006_alter_ids_to_big_auto_field.py  0007_trackuri_unavailable.py  0008_dynamicplaylist_is_group_mode.py  0009_migrate_is_group_mode.py  0010_add_tracklistenstats.py  (+3 more)
apps/websocket_sync/: apps.py  consumers.py  routing.py
melting_potlist/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: bootstrap-icons.css  main.css
static/js/: script.js
vue_components/: .eslintrc  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vue.config.js
vue_components/src/: main.js
(+23 files in other folders)
