[tool.poetry]
name = "melting-potlist"
version = "2.0.1"
description = "A web tool to generate and play musical playlists, powered by Discord OAuth"
authors = ["Evanaellio"]
license = "MIT"
readme = "README.md"
packages = [{ include = "melting_potlist" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "~4.1.7"
django-annoying = "^0.10.6"
djangorestframework = "^3.14.0"
django-yamlconf = "^1.4.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
requests = "^2.28.2"
requests-oauthlib = "^1.3.1"
whitenoise = "^6.3.0"
yt-dlp = "^2025"
google-api-python-client = "^2.79.0"
django-user-agents = "^0.4.0"
django-vite = "^2.1.3"
django-widget-tweaks = "^1.4.12"
uvicorn = "^0.20.0"
channels = "~3.0.5"
channels-redis = "~3.4.1"
unidecode = "^1.3.6"

[tool.poetry.group.dev]
optional = true

# poetry install --with dev
[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
